---
title: MEATTRACK Core Entity Relationship Diagram — Data
---
erDiagram
    ACCOUNTS {
        bigint account_id PK
        text account_type
        bigint reseller_id FK
        text name
        text email UK
        text password_hash
        text team_leader_role
        boolean is_active
    }

    INQUIRIES {
        bigint inquiry_id PK
        text email
        text business_name
        text status
        bigint assigned_team_leader_account_id FK
        bigint reviewed_by_account_id FK
        timestamptz created_at
    }

    RESELLERS {
        bigint reseller_id PK
        bigint inquiry_id FK,UK
        text business_name
        text email UK
        text reseller_status
        bigint team_leader_account_id FK
        bigint approved_by_account_id FK
    }

    INVENTORY_ITEMS {
        bigint item_id PK
        text item_type
        text category
        text name
        text unit
        numeric base_price
        numeric quantity_available
        boolean is_active
    }

    INVENTORY_BATCHES {
        bigint batch_id PK
        bigint item_id FK
        text batch_code UK
        text source_type
        numeric quantity_received
        numeric quantity_available
        date expiry_date
        text quality_status
    }

    PRODUCT_RECIPES {
        bigint recipe_id PK
        bigint product_item_id FK
        bigint material_item_id FK
        numeric quantity_required
        text unit
    }

    RESELLER_CART_ITEMS {
        bigint cart_item_id PK
        bigint account_id FK
        bigint product_id FK
        numeric quantity
        timestamptz updated_at
    }

    ORDERS {
        bigint order_id PK
        text order_type
        bigint reseller_id FK
        bigint created_by_account_id FK
        bigint approved_by_account_id FK
        text status
        numeric total_amount
        timestamptz fulfilled_at
    }

    ORDER_ITEMS {
        bigint order_item_id PK
        bigint order_id FK
        bigint product_id FK
        numeric quantity
        numeric unit_price
        numeric line_total
    }

    ORDER_PAYMENT_PROOFS {
        bigint order_payment_proof_id PK
        bigint order_id FK
        bigint uploaded_by_account_id FK
        text filename
        text content_type
        text checksum_sha256
        timestamptz uploaded_at
    }

    SALES_REPORTS {
        bigint sales_report_id PK
        text report_source
        bigint submitted_by_account_id FK
        bigint reseller_id FK
        date period_start
        date period_end
        numeric total_sales
        int total_orders
    }

    FORECAST_RUNS {
        bigint forecast_run_id PK
        bigint run_by_account_id FK
        text model_name
        int forecast_horizon_days
        text status
        text notes
    }

    FORECAST_RESULTS {
        bigint forecast_result_id PK
        bigint forecast_run_id FK
        bigint product_id FK
        date forecast_date
        numeric predicted_quantity
        numeric confidence_lower
        numeric confidence_upper
    }

    NOTIFICATIONS {
        bigint notification_id PK
        bigint recipient_account_id FK
        text recipient_role
        text category
        text severity
        text title
        timestamptz read_at
    }

    ACTIVITY_LOGS {
        bigint activity_log_id PK
        bigint account_id FK
        text action
        text entity_type
        bigint entity_id
        timestamptz created_at
    }

    RESELLERS o|--o{ ACCOUNTS : "links portal identity"
    ACCOUNTS o|--o{ INQUIRIES : "is assigned"
    ACCOUNTS o|--o{ INQUIRIES : "reviews"
    INQUIRIES o|--o| RESELLERS : "becomes"
    ACCOUNTS o|--o{ RESELLERS : "manages"
    ACCOUNTS o|--o{ RESELLERS : "approves"

    ACCOUNTS o|--o{ ACTIVITY_LOGS : "records actions"
    ACCOUNTS o|--o{ NOTIFICATIONS : "receives"

    INVENTORY_ITEMS ||--o{ INVENTORY_BATCHES : "stocked as"
    INVENTORY_ITEMS ||--o{ PRODUCT_RECIPES : "finished product"
    INVENTORY_ITEMS ||--o{ PRODUCT_RECIPES : "raw material"

    ACCOUNTS ||--o{ RESELLER_CART_ITEMS : "owns cart"
    INVENTORY_ITEMS ||--o{ RESELLER_CART_ITEMS : "selected product"

    RESELLERS o|--o{ ORDERS : "places"
    ACCOUNTS o|--o{ ORDERS : "creates"
    ACCOUNTS o|--o{ ORDERS : "approves"
    ORDERS ||--|{ ORDER_ITEMS : "contains"
    INVENTORY_ITEMS ||--o{ ORDER_ITEMS : "ordered product"
    ORDERS ||--o{ ORDER_PAYMENT_PROOFS : "documents payment"
    ACCOUNTS o|--o{ ORDER_PAYMENT_PROOFS : "uploads"

    ACCOUNTS o|--o{ SALES_REPORTS : "submits"
    RESELLERS o|--o{ SALES_REPORTS : "reported reseller"

    ACCOUNTS o|--o{ FORECAST_RUNS : "starts"
    FORECAST_RUNS ||--|{ FORECAST_RESULTS : "produces"
    INVENTORY_ITEMS ||--o{ FORECAST_RESULTS : "forecasted product"
